@@ -20,6 +20,14 @@
       <!--no pjl-->
       <!--no "text"-->
    </lang>
+   <autodetect>
+     <usb>
+       <commandset>PCL 6 Emulation, PostScript Level 3 For Mac Emulation, NPAP, PJL</commandset>
+       <description>Lexmark E120n</description>
+       <manufacturer>Lexmark International</manufacturer>
+       <model>Lexmark E120n</model>
+     </usb>
+   </autodetect>
    <functionality>B</functionality>
    <comments>
       <en>
