@@ -1,3 +1,8 @@
+2008-09-03  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/Lexmark-E120n.xml: Added IEEE 1284 device ID (RH bug
+	#201318).
+
 2008-09-03  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/Brother-HL-2060.xml: Changed recommended driver to
